--- a/show/templates/show/auth/list.html
+++ b/show/templates/show/auth/list.html
@@ -112,7 +112,7 @@
 
             $("#addPrivilegeBtn").click(function () {
                 $.ajax({
-                    url: '/auth_ajaxAdd',
+                    url: '/auth_ajaxAdd/',
                     success: function (e) {
                         $("body").append(e);
                     }
@@ -131,7 +131,7 @@
 
             function ajaxEdit(id) {
                 $.ajax({
-                    url: '/auth_ajaxAdd?id=' + id,
+                    url: '/auth_ajaxAdd/?id=' + id,
                     success: function (e) {
                         $("body").append(e);
                     }
@@ -140,7 +140,7 @@
 
             function ajaxDel(id) {
                 if (confirm('确定删除该记录?')) {
-                    window.location.href = '/auth_ajaxDel?id=' + id;
+                    window.location.href = '/auth_ajaxDel/?id=' + id;
                 }
 {#                if (confirm('确定删除该记录?')) {#}
 {#                    $.ajax({#}
