--- a/show/templates/show/ajax/addMenu.html
+++ b/show/templates/show/ajax/addMenu.html
@@ -16,7 +16,7 @@
                     <div class="modal-body">
                         <form class="form-horizontal" method="post" id="formAjaxId" data-collabel="3"
                               data-parsley-validate
-                              action="/auth_ajaxAddMenu">
+                              action="/auth_ajaxAddMenu/">
                         {% csrf_token %}
 
                             {% if "edit" == mode and menu != null %}
