--- a/show/templates/show/ajax/addUser.html
+++ b/show/templates/show/ajax/addUser.html
@@ -20,7 +20,7 @@
                     <div class="modal-body">
                         <form class="form-horizontal" method="post" id="formAjaxId" data-collabel="3"
                               data-parsley-validate
-                              action="/auth_ajaxAddUser"  parsley-validate parsley-bind>
+                              action="/auth_ajaxAddUser/"  parsley-validate parsley-bind>
                             {% csrf_token %}
                        {% if "edit" == mode and user != null %}
                                 <input type="hidden" name="mode" value="{{ mode }}"/>
@@ -33,22 +33,22 @@
 
                                     <input type="text"
                                            class="form-control"
-                                           name="nickName"
+                                           name="nickname"
                                            placeholder="请输入员工昵称" parsley-required="true"
-                       {% if "edit" == mode and user != null %}value="{{ user.nickName }}" {% endif %}/>
+                       {% if "edit" == mode and user != null %}value="{{ user.nickname }}" {% endif %}/>
                                 </div>
                             </div>
 
                             <div class="form-group"><label
-                                    class="col-lg-2 control-label">登陆手机号</label>
+                                    class="col-lg-2 control-label">登陆名</label>
 
                                 <div class="col-lg-10">
 
                                     <input type="text"
                                            class="form-control"
-                                           name="phoneNo"
-                                           placeholder="请输入登陆手机号" parsley-required="true" parsley-type="digits"
-                                    {% if "edit" == mode and user != null %}readonly="readonly" value="{{ user.phoneNo }}" {% endif %}/>
+                                           name="username"
+                                           placeholder="请输入登陆名" parsley-required="true" parsley-type="digits"
+                                    {% if "edit" == mode and user != null %}readonly="readonly" value="{{ user.user_name }}" {% endif %}/>
                                 </div>
                             </div>
 
@@ -82,7 +82,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="{% static "plugins/form/form.js" %}"></script>
+<script type="text/javascript" src="{% static "js/form/form.js" %}"></script>
 <script type="text/javascript">
     $("#ajaxModule button.close,#ajaxModule button.closeBtn").click(function () {
         $("#ajaxModule").fadeOut();
