--- a/show/templates/show/ajax/allotUserRole.html
+++ b/show/templates/show/ajax/allotUserRole.html
@@ -7,7 +7,7 @@
                     <div class="modal-header">
                         <button type="button" class="close" aria-hidden="true">×</button>
                         <h4 class="modal-title">用户角色管理: {{ user.nickName }}</h4></div>
-                    <form method="post" action="/auth_ajaxAllotUserRole">
+                    <form method="post" action="/auth_ajaxAllotUserRole/">
                     {% csrf_token %}
                     <div class="modal-body">
                         <input type="hidden" name="user_id" value="{{ user.id }}"/>
@@ -28,7 +28,7 @@
                                 <td><input
                                         type="checkbox" name="roles" value="{{ role.role_id }}"
                                         {% for userRole in userRoleList %}
-                                            {% if userRole.role_id.role_id == role.role_id %}checked="checked"{% endif %}
+                                            {% if userRole.role_id_id == role.role_id %}checked="checked"{% endif %}
                                         {% endfor %}/>
                                     </td>
                                 <td>{{ role.role_id }}
