--- a/show/templates/show/common/nav.html
+++ b/show/templates/show/common/nav.html
@@ -6,14 +6,14 @@
 		-->
 	<nav id="menu"  data-search="close">
 		<ul>
-            <li><span><i class="icon  fa fa-laptop"></i> 库存管理 </span>
-				<ul>
-                    <li><a href="/commodity/"><i class="icon  fa fa-rocket"></i> 采购管理 </a></li>
-                    <li><a href="/storage/"><i class="icon  fa fa-rocket"></i> 库房管理 </a></li>
-                    <li><a href="/sale/"><i class="icon  fa fa-rocket"></i> 销售管理 </a></li>
-                    <li><a href="/sale_statistics/"><i class="icon  fa fa-rocket"></i> 销售统计 </a></li>
-				</ul>
-			</li>
+{#            <li><span><i class="icon  fa fa-laptop"></i> 库存管理 </span>#}
+{#				<ul>#}
+{#                    <li><a href="/commodity/"><i class="icon  fa fa-rocket"></i> 采购管理 </a></li>#}
+{#                    <li><a href="/storage/"><i class="icon  fa fa-rocket"></i> 库房管理 </a></li>#}
+{#                    <li><a href="/sale/"><i class="icon  fa fa-rocket"></i> 销售管理 </a></li>#}
+{#                    <li><a href="/sale_statistics/"><i class="icon  fa fa-rocket"></i> 销售统计 </a></li>#}
+{#				</ul>#}
+{#			</li>#}
 
 {#			<li><span><i class="icon  fa fa-laptop"></i> 库存管理 </span>#}
 {#				<ul>#}
@@ -32,23 +32,24 @@
 {#					<li><a href="/progress/"><i class="icon  fa fa-search"></i> 生产进度查询 </a></li>#}
 {#				</ul>#}
 {#			</li>#}
-            <li><span><i class="icon  fa fa-fire"></i> 权限管理 </span>
-				<ul>
-					<li><a href="/auth_list/"><i class="icon  fa fa-rocket"></i> 权限列表 </a></li>
-					<li><a href="/auth_menu/"><i class="icon  fa fa-star"></i> 菜单列表 </a></li>
-					<li><a href="/auth_role/"><i class="icon  fa fa-search"></i> 角色列表 </a></li>
-                    <li><a href="/auth_user/"><i class="icon  fa fa-search"></i> 员工管理 </a></li>
-                    <li><a href="/auth_mine/"><i class="icon  fa fa-search"></i> 我的权限 </a></li>
-				</ul>
-			</li>
-            <li><span><i class="icon  fa fa-flag"></i> 个人信息管理 </span>
-				<ul>
-                    <li><a href="/profile/"><i class="icon  fa fa-star"></i> 个人信息 </a></li>
-					<li><a href="/password/"><i class="icon  fa fa-rocket"></i> 密码修改 </a></li>
-				</ul>
-			</li>
+{#            <li><span><i class="icon  fa fa-fire"></i> 权限管理 </span>#}
+{#				<ul>#}
+{#					<li><a href="/auth_list/"><i class="icon  fa fa-rocket"></i> 权限列表 </a></li>#}
+{#					<li><a href="/auth_menu/"><i class="icon  fa fa-star"></i> 菜单列表 </a></li>#}
+{#					<li><a href="/auth_role/"><i class="icon  fa fa-search"></i> 角色列表 </a></li>#}
+{#                    <li><a href="/auth_user/"><i class="icon  fa fa-search"></i> 员工管理 </a></li>#}
+{#                    <li><a href="/auth_mine/"><i class="icon  fa fa-search"></i> 我的权限 </a></li>#}
+{#				</ul>#}
+{#			</li>#}
+{#            <li><span><i class="icon  fa fa-flag"></i> 个人信息管理 </span>#}
+{#				<ul>#}
+{#                    <li><a href="/profile/"><i class="icon  fa fa-star"></i> 个人信息 </a></li>#}
+{#					<li><a href="/password/"><i class="icon  fa fa-rocket"></i> 密码修改 </a></li>#}
+{#				</ul>#}
+{#			</li>#}
 			<!--<li><a href="index/"><i class="icon  fa fa-rocket"></i> 条形码查询 </a></li>-->
 
+            {% autoescape off %}{{ request.session.menu }}{% endautoescape %}
 		</ul>
 	</nav>
 		<!-- //nav left menu-->
