--- a/show/templates/show/sale_statistics.html
+++ b/show/templates/show/sale_statistics.html
@@ -22,8 +22,6 @@
                                 <li class="active"><span>销售数据统计</span></li>
                             </ol>
 
-                            <h1>销售数据统计</h1>
-
                         </div>
                     </div>
                     <div class="row">
@@ -32,6 +30,35 @@
                         </header>
                         <div class="col-lg-12">
                             <div class="main-box">
+                                 <form class="form-horizontal" method="post" id="formAjaxId" data-collabel="3"
+                              data-parsley-validate>
+                            <div class="form-group"><label
+                                    class="col-lg-2 control-label">开始日期</label>
+
+                                <div class="col-lg-6">
+
+                                    <input type="text"
+                                           class="form-control" id="from_date"
+                                           name="from_date" placeholder="请输入开始日期"/>
+                                </div>
+                            </div>
+
+                            <div class="form-group"><label
+                                    class="col-lg-2 control-label">结束日期</label>
+
+                                <div class="col-lg-6">
+
+                                    <input type="text"
+                                           class="form-control"
+                                           name="to_date" id="to_date"
+                                           placeholder="请输入结束日期" />
+                                </div>
+                            </div>
+
+                            <div class="modal-footer" style="text-align:center">
+                                <button class="btn btn-primary btn btn-success" type="button" id="to_query">查询</button>
+                            </div>
+                        </form>
 
                                 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
                             </div>
@@ -60,8 +87,21 @@
     <script src="{% static "js/highcharts/js/modules/data.js" %}"></script>
     <script src="{% static "js/highcharts/js/modules/drilldown.js" %}"></script>
     <script type="text/javascript">
+        query('','');
 
-         $('#container').highcharts({
+        $("#to_query").click(function(){
+            query($("#from_date").val(), $("#to_date").val());
+        })
+
+        function query(from_date, to_date){
+            $.ajax({
+            url: "/ajax_sale_statistics/?from_date="+from_date+"&to_date="+to_date,
+            dataType: 'json',
+            success: function (resp) {
+                console.log(resp)
+                console.log(resp.date)
+                console.log(resp.data)
+                $('#container').highcharts({
                     title: {
                         text: '销售数据统计一览',
                         x: -20 //center
@@ -71,9 +111,7 @@
                         x: -20
                     },
                     xAxis: {
-                        categories:
-                                            ['201601', '201602', '201603', '201604', '201605', '第6题',
-                                        '第7题', '第8题', '第9题', '第10题']
+                        categories: resp.date
                     },
                     yAxis: {
                         title: {
@@ -94,21 +132,12 @@
                         verticalAlign: 'middle',
                         borderWidth: 0
                     },
-                    series:
+                    series: resp.data
+                })
+            }
+        })
+        }
 
-                                    [{
-                                name: '五角场店',
-                                data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
-                            }, {
-                                name: '新天地店',
-                                data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
-                            }, {
-                                name: '国贸门店',
-                                data: [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0]
-                            }, {
-                                name: '三角元',
-                                data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-                            }]
-                });
+
     </script>
 {% endblock %}
